--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,12 @@
 {
   "name": "flexible-calendar-ui-demo",
   "version": 2,
-  "builds": [
-    {
-      "src": "demo/index.html",
-      "use": "@vercel/static"
-    }
-  ],
+  "buildCommand": "npm run build:demo",
+  "outputDirectory": "demo-dist",
   "routes": [
     { 
       "src": "/(.*)", 
-      "dest": "/demo/index.html" 
+      "dest": "/" 
     }
   ]
 }
