--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepublishOnly": "npm run build",
     "test": "echo \"No tests specified\"",
     "build:docs": "typedoc --out docs src/index.ts",
-    "vercel:build": "npm run build:demo"
+    "vercel:build": "vite build --config vite.config.js"
   },"keywords": [
     "react",
     "calendar",
@@ -62,12 +62,12 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^6.0.0",
-    "parcel": "^2.9.3",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
     "rollup": "^2.75.6",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "terser": "^5.24.0",
     "typescript": "^4.7.3",
     "vite": "^5.1.0"
   }
